change: tiles to be semantic

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -452,7 +452,9 @@
                 <hr>
                 <section class="my4 project-gallery">
 
-                    <article class="project-tile color-secondary secondary rounded shadow">
+                    <!-- OLD 
+                        
+                        <article class="project-tile color-secondary secondary rounded shadow">
                         <a href="./img/projects/gab.png">
                             <img src="./img/projects/gab.png"></img>
                         </a>
@@ -463,11 +465,11 @@
                                 href="img/projects/gab.png"></a>
                         </div>
 
-                        <div data-object="1" class="project-tile-footer">
-                            <header class="project-title">
+                        <footer data-object="1" class="project-tile-footer">
+                            <div class="project-title">
                                 <h4 class="project-title color-inverted">Technical Documentation
                                 </h4>
-                            </header>
+                            </div>
                             <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Placeat
                                 aut facilis quisquam. Nihil optio, ut perspiciatis debitis
@@ -475,73 +477,107 @@
                                 provident mollitia ratione magnam, ex nostrum incidunt eius
                                 assumenda, placeat
                                 doloribus?</p>
-                        </div>
+                        </footer>
+                    </article> -->
+
+                    <article class="tile color-primary primary" data-object="2">
+                        <header>
+                            <h4 class="tile-title color-inverted">Nihil optio, ut perspiciatis debitis
+                                architecto asperiores</h4>
+                            <a href="./img/projects/office_v2.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v2.png"></img>
+                                    <!-- <figcaption>Legenda para a imagem</figcaption> -->
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?</p>
+                        <footer>
+                            <div class="tile-actions">
+                                <a data-activator="2"
+                                    class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
+                                <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus"
+                                    href="img/projects/gab.png"></a>
+                            </div>
+                        </footer>
                     </article>
 
-                    <article class="project-tile color-accent accent rounded">
-                        <a href="./img/projects/office_v2.png">
-                            <img src="./img/projects/office_v2.png"></img>
-                        </a>
-                        <div class="project-tile-actions">
-                            <a data-activator="2" class="tile-action tile-action-expand secondary color-inverted mdi mdi-chevron-up"></a>
-                            <a class="tile-action tile-action-open secondary color-inverted mdi mdi-plus" href="img/projects/gab.png"></a>
-                        </div>
-
-                        <div data-object="2" class="project-tile-footer">
-                            <header class="project-title">
-                                <h4 class="project-title color-inverted">Technical Documentation
-                                </h4>
-                            </header>
-                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Placeat
-                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                                architecto asperiores
-                                provident mollitia ratione magnam, ex nostrum incidunt eius
-                                assumenda, placeat
-                                doloribus?Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Placeat
-                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                                architecto asperiores
-                                provident mollitia ratione magnam, ex nostrum incidunt eius
-                                assumenda, placeat
-                                doloribus?Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Placeat
-                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                                architecto asperiores
-                                provident mollitia ratione magnam, ex nostrum incidunt eius
-                                assumenda, placeat
-                                doloribus?Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Placeat
-                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                                architecto asperiores
-                                provident mollitia ratione magnam, ex nostrum incidunt eius
-                                assumenda, placeat
-                                doloribus?</p>
-                        </div>
+                    <article class="tile color-secondary secondary" data-object="3">
+                        <header>
+                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
+                            <a href="./img/projects/office_v3.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v3.png"></img>
+                                    <!-- <figcaption>Legenda para a imagem</figcaption> -->
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?</p>
+                        <footer>
+                            <div class="tile-actions">
+                                <a data-activator="3"
+                                    class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
+                                <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus"
+                                    href="img/projects/gab.png"></a>
+                            </div>
+                        </footer>
                     </article>
 
-                    <article class="project-tile color-primary primary minimalist">
-                        <a href="./img/projects/office_v3.png">
-                            <img src="./img/projects/office_v3.png"></img>
-                        </a>
-                        <div class="project-tile-actions">
-                            <a data-activator="3" class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
-                            <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus" href="img/projects/gab.png"></a>
-                        </div>
-
-                        <div data-object="3" class="project-tile-footer">
-                            <header class="project-title">
-                                <h4 class="project-title color-inverted">Technical Documentation
-                                </h4>
-                            </header>
-                            <p class="color-inverted">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Placeat
-                                aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                                architecto asperiores
-                                provident mollitia ratione magnam, ex nostrum incidunt eius
-                                assumenda, placeat
-                                doloribus?</p>
-                        </div>
+                    <article class="tile color-secondary secondary" data-object="3">
+                        <header>
+                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
+                            <a href="./img/projects/office_v3.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v3.png"></img>
+                                    <!-- <figcaption>Legenda para a imagem</figcaption> -->
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?</p>
+                        <footer>
+                            <div class="tile-actions">
+                                <a data-activator="3"
+                                    class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
+                                <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus"
+                                    href="img/projects/gab.png"></a>
+                            </div>
+                        </footer>
                     </article>
 
                 </section>
