add: preventAnchor function to let a tags be focusable without refresh the page when clicked

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -460,8 +460,8 @@
                         </a>
                         <div class="project-tile-actions">
                             <a data-activator="1"
-                                class="tile-action tile-action-expand primary color-inverted mdi mdi-chevron-up"></a>
-                            <a class="tile-action tile-action-open primary color-inverted mdi mdi-plus"
+                                tab-index="0" class="tile-action tile-action-expand primary color-inverted mdi mdi-chevron-up"></a>
+                            <a tab-index="0" class="tile-action tile-action-open primary color-inverted mdi mdi-plus"
                                 href="img/projects/gab.png"></a>
                         </div>
 
@@ -518,9 +518,34 @@
                             doloribus?</p>
                         <footer>
                             <div class="tile-actions">
-                                <a data-activator="2"
+                                <a role="button" href="#" data-activator="2" class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
+                                <a role="button" href="img/projects/gab.png" class="tile-action tile-action-open accent color-inverted mdi mdi-plus"></a>
+                            </div>
+                        </footer>
+                    </article>
+
+                    <article class="tile color-secondary secondary" data-object="3">
+                        <header>
+                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
+                            <a href="./img/projects/office_v3.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v3.png"></img>
+                                    <!-- <figcaption>Legenda para a imagem</figcaption> -->
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?</p>
+                        <footer>
+                            <div class="tile-actions">
+                                <a data-activator="3" tab-index="0"
                                     class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
-                                <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus"
+                                <a tab-index="0" class="tile-action tile-action-open accent color-inverted mdi mdi-plus"
                                     href="img/projects/gab.png"></a>
                             </div>
                         </footer>
@@ -545,36 +570,9 @@
                             doloribus?</p>
                         <footer>
                             <div class="tile-actions">
-                                <a data-activator="3"
+                                <a data-activator="3" tab-index="0"
                                     class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
-                                <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus"
-                                    href="img/projects/gab.png"></a>
-                            </div>
-                        </footer>
-                    </article>
-
-                    <article class="tile color-secondary secondary" data-object="3">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="./img/projects/office_v3.png">
-                                <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v3.png"></img>
-                                    <!-- <figcaption>Legenda para a imagem</figcaption> -->
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?</p>
-                        <footer>
-                            <div class="tile-actions">
-                                <a data-activator="3"
-                                    class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
-                                <a class="tile-action tile-action-open accent color-inverted mdi mdi-plus"
+                                <a tab-index="0" class="tile-action tile-action-open accent color-inverted mdi mdi-plus"
                                     href="img/projects/gab.png"></a>
                             </div>
                         </footer>
