--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -70,162 +70,43 @@
         </div>
     </nav>
     <main id="main-doc" class="pa0" role="main">
-        <section class="main-section pa8" id="projects">
-            <header>
-                <h2>Projects</h2>
-            </header>
 
-            <section class="my8 project-types" id="project-design">
-                <h3>Design</h3>
-                <hr>
-                <section class="my4 project-gallery">
-
-                    <div class="tile figure color-primary primary" data-object="1">
-                        <header>
-                            <h4 class="tile-title color-inverted">Nihil optio, ut perspiciatis debitis
-                                architecto asperiores</h4>
-                            <a href="./img/projects/office_v2.png">
-                                <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v2.png"></img>
-                                    <!-- <figcaption>Legenda para a imagem</figcaption> -->
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut facilis quisquam.</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="1"
-                                    class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
-                                    class="tile-action tile-action-open accent color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile rounded color-secondary secondary" data-object="3">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="./img/projects/office_v3.png">
-                                <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v3.png"></img>
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="3"
-                                    class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
-                                    class="tile-action tile-action-open accent color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile minimalist color-secondary secondary" data-object="3">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="./img/projects/office_v3.png">
-                                <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v3.png"></img>
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="3"
-                                    class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
-                                    class="tile-action tile-action-open accent color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile color-secondary secondary" data-object="3">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="./img/projects/office_v3.png">
-                                <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v3.png"></img>
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="3"
-                                    class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
-                                    class="tile-action tile-action-open accent color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile image titled color-secondary secondary" data-object="7">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <img src="./img/projects/office_v3.png"></img>
-                        </header>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="7"
-                                    class="tile-action tile-action-expand accent color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
-                                    class="tile-action tile-action-open accent color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile image color-secondary secondary" data-object="3">
-                        <a href="./img/projects/office_v3.png"><img src="./img/projects/office_v3.png"></img></a>
-                    </div>
-
-                    <div class="tile image blurred color-secondary secondary" data-object="3">
-                        <a href="./img/projects/office_v3.png"><img src="./img/projects/office_v3.png"></img></a>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="7"
-                                    class="tile-action tile-action-zoom accent color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                </section>
-            </section>
-
-        </section>
 
         <section class="main-section pa8" id="contact">
             <header>
                 <h2>Contact</h2>
+
             </header>
+
+            <section class="row md-align-item-center md-justify-content-center">
+                <div class="col-xs12 col-md6">
+
+                    <form class="pa8" id="contact" name="contact" action="">
+
+                        <fieldset class="main pa8 mb8">
+                            <legend class="mb16"> Contact form</legend>
+
+                            <div class="input mb8">
+                                <label for="subject">Subject</label>
+                                <input main color-inverted" type="text" id="subject" name="subject"
+                                    maxlength="65" required aria-required="true">
+                            </div>
+                            <div class="input mb8">
+                                <label for="email">E-mail</label>
+                                <input main color-inverted" type="email" id="email" name="email"
+                                    maxlength="65" required aria-required="true">
+                            </div>
+                            <div class="input mb8">
+                                <label for="content">Content</label>
+                                <textarea class="main color-inverted" role="text" id="content" name="content"
+                                    maxlength="500" required aria-required="true"></textarea>
+                            </div>
+                        </fieldset>
+
+
+                    </form>
+                </div>
+            </section>
         </section>
 
     </main>
