add: "less than display none" and "greater than display none" classes

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -78,22 +78,27 @@
 
             </header>
 
-            <section class="row md-align-item-center md-justify-content-center">
+            <section class="row">
+                
+                <div id="contact-art" class="lt-md-none col-md6 accent">
+
+                </div>
+                
                 <div class="col-xs12 col-md6">
 
-                    <form class="pa8" id="contact" name="contact" action="">
+                    <form class="dark color-inverted main pa8" id="contact" name="contact" action="">
 
                         <fieldset class="main pa8 mb8">
                             <legend class="mb16"> Contact form</legend>
 
                             <div class="input mb8">
                                 <label for="subject">Subject</label>
-                                <input main color-inverted" type="text" id="subject" name="subject"
+                                <input class="main color-inverted" type="text" id="subject" name="subject"
                                     maxlength="65" required aria-required="true">
                             </div>
                             <div class="input mb8">
                                 <label for="email">E-mail</label>
-                                <input main color-inverted" type="email" id="email" name="email"
+                                <input class="main color-inverted" type="email" id="email" name="email"
                                     maxlength="65" required aria-required="true">
                             </div>
                             <div class="input mb8">
