--- a/technicalDocumentationPage/index.html
+++ b/technicalDocumentationPage/index.html
@@ -45,7 +45,7 @@
             <div class="row dark">
                 <pre class="col-md12 secondary color-inverted">
 <code>
-$media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
+$breakpoints-sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
 $total_columns: 12
 
@@ -75,7 +75,7 @@ $column_percentage: 100% / $total_columns
             <div class="row dark">
                 <pre class="col-md12 secondary color-inverted">
 <code>
-$media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
+$breakpoints-sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
 $total_columns: 12
 
@@ -104,7 +104,7 @@ $column_percentage: 100% / $total_columns
             <div class="row dark">
                 <pre class="col-md12 secondary color-inverted">
 <code>
-$media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
+$breakpoints-sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
 $total_columns: 12
 
@@ -133,7 +133,7 @@ $column_percentage: 100% / $total_columns
             <div class="row dark">
                 <pre class="col-md12 secondary color-inverted">
 <code>
-$media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
+$breakpoints-sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
 $total_columns: 12
 
@@ -162,7 +162,7 @@ $column_percentage: 100% / $total_columns
             <div class="row dark">
                 <pre class="col-md12 secondary color-inverted">
 <code>
-$media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
+$breakpoints-sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
 $total_columns: 12
 
