--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -64,7 +64,7 @@
                     <label for="dark-mode" class="custom-chebox">
                         <i class="mdi mdi-theme-light-dark"></i><span>Dark Mode</span>
                     </label>
-                    <input title="Dark mode" type="checkbox" name="dark-mode" id="dark-mode">
+                    <input title="Dark mode" type="checkbox" name="dark-mode" id="dark-mode" title="Switch Dark Mode">
                     <div class="switch">
                         <div class="background"></div>
                         <div class="pin"></div>
@@ -77,6 +77,226 @@
             </div>
         </div>
     </nav>
+
+    <main id="main-doc" class="pa0" role="main">
+
+        <section class="main-section pa8 color-primary" id="welcome-section">
+            <div class="svg-background"><svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 1080"
+                    style="enable-background:new 0 0 1920 1080;" xml:space="preserve">
+                    <style type="text/css">
+                        .st0 {
+                            fill: #FF8365;
+                        }
+                    </style>
+                    <g>
+                        <path class="st0" d="M-113,1080C-367.4,807.1-380,250.9-113,0c99.3-93.3,232-139.5,828-123c341.4,9.5,756.8,37.3,1229,105
+		c11.5,44.7,19.1,106.5-11,159c-120.9,210.6-647.5-81.1-949,152c-240.8,186.2-66.5,495.9-387,787c-58.4,53.1-208.6,185.6-402,168
+		C29.6,1233-79.3,1116.2-113,1080z" />
+                    </g>
+                </svg></div>
+            <div class="row color-inverted">
+                <div class="col-xs12 col-sm8 col-md5 pa8 main">
+                    <header>
+                        <h1>Ítalo Polazzi a Web Develover</h1>
+                        <h2>Welcome</h2>
+                    </header>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti voluptatem culpa
+                        possimus ea
+                        hic
+                        ratione, quaerat optio ab dolore ipsam iste sit fugit fuga ullam nulla facere quis atque
+                        amet.
+                    </p>
+
+                </div>
+
+            </div>
+
+
+        </section>
+
+        <section class="main-section pa8" id="projects">
+            <header>
+                <h2>Projects</h2>
+                <hr>
+            </header>
+
+            <section class="my8 project-types" id="project-design">
+                <h3>Design</h3>
+                <section class="my4 project-gallery">
+
+                    <div class="tile color-primary primary" data-object="1">
+                        <header>
+                            <h4 class="tile-title color-inverted">Nihil optio, ut perspiciatis debitis
+                                architecto asperiores</h4>
+                            <a href="./img/projects/office_v2.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v2.png"></img>
+                                    <!-- <figcaption>Legenda para a imagem</figcaption> -->
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut facilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut facilis quisquam.</p>
+                        <footer class="color-inverted">
+                            <div class="tile-actions">
+                                <a role="button" tabindex="0" href="#" data-activator="1"
+                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
+                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
+                            </div>
+                        </footer>
+                    </div>
+
+                    <div class="tile color-secondary secondary" data-object="3">
+                        <header>
+                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
+                            <a href="./img/projects/office_v3.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v3.png"></img>
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?</p>
+                        <footer class="color-inverted">
+                            <div class="tile-actions">
+                                <a role="button" tabindex="0" href="#" data-activator="3"
+                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
+                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
+                            </div>
+                        </footer>
+                    </div>
+
+                    <div class="tile color-secondary secondary" data-object="3">
+                        <header>
+                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
+                            <a href="./img/projects/office_v3.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v3.png"></img>
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?</p>
+                        <footer class="color-inverted">
+                            <div class="tile-actions">
+                                <a role="button" tabindex="0" href="#" data-activator="3"
+                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
+                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
+                            </div>
+                        </footer>
+                    </div>
+
+                    <div class="tile color-secondary secondary" data-object="3">
+                        <header>
+                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
+                            <a href="./img/projects/office_v3.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v3.png"></img>
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?</p>
+                        <footer class="color-inverted">
+                            <div class="tile-actions">
+                                <a role="button" tabindex="0" href="#" data-activator="3"
+                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
+                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
+                            </div>
+                        </footer>
+                    </div>
+
+                    <div class="tile color-secondary secondary" data-object="7">
+                        <header>
+                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
+                            <img src="./img/projects/office_v3.png"></img>
+                        </header>
+                        <footer class="color-inverted">
+                            <div class="tile-actions">
+                                <a role="button" tabindex="0" href="#" data-activator="7"
+                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
+                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
+                            </div>
+                        </footer>
+                    </div>
+
+                </section>
+            </section>
+
+        </section>
+
+        <section class="main-section pa8" id="contact">
+            <header>
+                <h2>Contact</h2>
+                <hr>
+            </header>
+
+            <section class="row">
+
+                <div id="contact-art" class="stretch lt-md-none col-md6 accent">
+                    <!-- <div></div> -->
+                </div>
+
+                <div class="col-xs12 col-md6">
+
+                    <form class="dark color-inverted main pa8" id="contact" name="contact" action="">
+
+                        <fieldset class="main pa8 mb8">
+                            <legend class="mb16"> Contact form</legend>
+
+                            <div class="input mb8">
+                                <label for="subject">Subject</label>
+                                <input class="main color-inverted" type="text" id="subject" name="subject"
+                                    maxlength="65" required aria-required="true">
+                            </div>
+                            <div class="input mb8">
+                                <label for="email">E-mail</label>
+                                <input class="main color-inverted" type="email" id="email" name="email" maxlength="65"
+                                    required aria-required="true">
+                            </div>
+                            <div class="input mb8">
+                                <label for="content">Content</label>
+                                <textarea class="main color-inverted" role="text" id="content" name="content"
+                                    maxlength="500" required aria-required="true"></textarea>
+                            </div>
+                        </fieldset>
+
+
+                    </form>
+                </div>
+            </section>
+        </section>
+
+    </main>
+
 
     <footer id="footer" class="accent">&copy; Ítalo Polazzi - 2019</footer>
     <script src="js/index.js" type="module"></script>
