add: footer content

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -20,8 +20,7 @@
     </ul>
     <nav id="navbar" class="primary color-inverted pa8" role="navigation">
         <header>
-
-
+            <object class="logo color-inverted" data="./img/logo.svg" type="image/svg+xml"></object>
         </header>
         <div id="nav-menu">
             <ul id="nav-internal">
@@ -80,7 +79,7 @@
 
     <main id="main-doc" class="pa0" role="main">
 
-        <section class="main-section pa8 color-primary" id="welcome-section">
+        <section class="main-section pa color-primary" id="welcome-section">
             <div class="svg-background"><svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 1080"
                     style="enable-background:new 0 0 1920 1080;" xml:space="preserve">
@@ -115,17 +114,102 @@
 
         </section>
 
-        <section class="main-section pa8" id="projects">
+        <section class="main-section pa" id="projects">
             <header>
                 <h2>Projects</h2>
                 <hr>
             </header>
 
-            <section class="my8 project-types" id="project-design">
-                <h3>Design</h3>
+            <section class="my8 project-types" id="project-web">
+                <h3>Web Developer</h3>
                 <section class="my4 project-gallery">
 
-                    <div class="tile color-primary primary" data-object="1">
+                    <div class="tile secondary color-secondary" data-object="1">
+                        <header>
+                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
+                            <a href="./img/projects/office_v3.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v3.png"></img>
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?</p>
+                        <footer class="color-inverted">
+                            <div class="tile-actions">
+                                <a role="button" tabindex="0" href="#" data-activator="1"
+                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
+                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
+                            </div>
+                        </footer>
+                    </div>
+
+                    <div class="tile color-secondary secondary" data-object="2">
+                        <header>
+                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
+                            <a href="./img/projects/office_v3.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v3.png"></img>
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?</p>
+                        <footer class="color-inverted">
+                            <div class="tile-actions">
+                                <a role="button" tabindex="0" href="#" data-activator="2"
+                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
+                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
+                            </div>
+                        </footer>
+                    </div>
+
+                    <div class="tile color-secondary secondary" data-object="3">
+                        <header>
+                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
+                            <a href="./img/projects/office_v3.png">
+                                <figure class="tile-screenshot">
+                                    <img src="./img/projects/office_v3.png"></img>
+                                </figure>
+                            </a>
+                        </header>
+                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Placeat
+                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
+                            architecto asperiores
+                            provident mollitia ratione magnam, ex nostrum incidunt eius
+                            assumenda, placeat
+                            doloribus?</p>
+                        <footer class="color-inverted">
+                            <div class="tile-actions">
+                                <a role="button" tabindex="0" href="#" data-activator="3"
+                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
+                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
+                            </div>
+                        </footer>
+                    </div>
+
+                </section>
+            </section>
+
+            <section class="my8 project-types" id="project-design">
+                <h3>Graphic Designer</h3>
+                <section class="my4 project-gallery">
+
+                    <div class="tile secondary color-secondary" data-object="4">
                         <header>
                             <h4 class="tile-title color-inverted">Nihil optio, ut perspiciatis debitis
                                 architecto asperiores</h4>
@@ -147,7 +231,7 @@
                             aut facilis quisquam.</p>
                         <footer class="color-inverted">
                             <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="1"
+                                <a role="button" tabindex="0" href="#" data-activator="4"
                                     class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
                                 <a tabindex="0" role="button" href="img/projects/gab.png"
                                     class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
@@ -155,7 +239,7 @@
                         </footer>
                     </div>
 
-                    <div class="tile color-secondary secondary" data-object="3">
+                    <div class="tile color-secondary secondary" data-object="5">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
                             <a href="./img/projects/office_v3.png">
@@ -173,7 +257,7 @@
                             doloribus?</p>
                         <footer class="color-inverted">
                             <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="3"
+                                <a role="button" tabindex="0" href="#" data-activator="5"
                                     class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
                                 <a tabindex="0" role="button" href="img/projects/gab.png"
                                     class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
@@ -181,7 +265,7 @@
                         </footer>
                     </div>
 
-                    <div class="tile color-secondary secondary" data-object="3">
+                    <div class="tile color-secondary secondary" data-object="6">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
                             <a href="./img/projects/office_v3.png">
@@ -199,48 +283,7 @@
                             doloribus?</p>
                         <footer class="color-inverted">
                             <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="3"
-                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
-                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile color-secondary secondary" data-object="3">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="./img/projects/office_v3.png">
-                                <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v3.png"></img>
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="3"
-                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
-                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile color-secondary secondary" data-object="7">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <img src="./img/projects/office_v3.png"></img>
-                        </header>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="7"
+                                <a role="button" tabindex="0" href="#" data-activator="6"
                                     class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
                                 <a tabindex="0" role="button" href="img/projects/gab.png"
                                     class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
@@ -253,7 +296,7 @@
 
         </section>
 
-        <section class="main-section pa8" id="contact">
+        <section class="main-section pa" id="contact">
             <header>
                 <h2>Contact</h2>
                 <hr>
@@ -297,8 +340,29 @@
 
     </main>
 
-
-    <footer id="footer" class="accent">&copy; Ítalo Polazzi - 2019</footer>
+    
+    <footer id="footer" class="accent container">
+        <div class="row">
+            <div class="xs-text-align-center col-xs12 col-sm12 col-md2 pa8">
+                <object class="logo color-inverted" data="./img/logo.svg" type="image/svg+xml"></object>
+                <br>
+                <span class="logo">Polazzi</span>
+            </div>
+            <div class="xs-text-align-justify col-xs12 col-sm6 col-md5 pa8">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi saepe esse temporibus, a, impedit ex
+                    nulla soluta similique quo praesentium doloribus illum voluptatibus quisquam provident sunt ratione
+                    amet aut velit.</p>
+            </div>
+            <div class="xs-text-align-justify col-xs12 col-sm6 col-md5 pa8">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi saepe esse temporibus, a, impedit ex
+                    nulla soluta similique quo praesentium doloribus illum voluptatibus quisquam provident sunt ratione
+                    amet aut velit.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs12 xs-text-align-center pa8">&copy; Ítalo Polazzi - 2019</div>
+        </div>
+    </footer>
     <script src="js/index.js" type="module"></script>
     <!-- <script src="https://cdn.freecodecamp.org/<i class="mdi mdi-read">able-projects-fcc/v1/bundle.js"></script> --></i>
 </body>
