--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -20,7 +20,7 @@
     </ul>
     <nav id="navbar" class="primary color-inverted pa8" role="navigation">
         <header>
-            <object class="logo color-inverted" data="./img/logo.svg" type="image/svg+xml"></object>
+            <custom-svg svg="logo" class="color-inverted"></custom-svg>
         </header>
         <div id="nav-menu">
             <ul id="nav-internal">
@@ -340,11 +340,11 @@
 
     </main>
 
-    
+
     <footer id="footer" class="accent container">
         <div class="row">
             <div class="xs-text-align-center col-xs12 col-sm12 col-md2 pa8">
-                <object class="logo color-inverted" data="./img/logo.svg" type="image/svg+xml"></object>
+                <custom-svg svg="logo"></custom-svg>
                 <br>
                 <span class="logo">Polazzi</span>
             </div>
@@ -354,16 +354,22 @@
                     amet aut velit.</p>
             </div>
             <div class="xs-text-align-justify col-xs12 col-sm6 col-md5 pa8">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi saepe esse temporibus, a, impedit ex
-                    nulla soluta similique quo praesentium doloribus illum voluptatibus quisquam provident sunt ratione
-                    amet aut velit.</p>
+                <!-- <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
+                    data-type="horizontal" data-theme="dark" data-vanity="itpzzi"><a class="LI-simple-link"
+                        href='https://br.linkedin.com/in/itpzzi?trk=profile-badge'>Ítalo Polazzi Ferreira</a></div>
+                        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
+                            data-type="vertical" data-theme="dark" data-vanity="itpzzi"><a class="LI-simple-link"
+                                href='https://br.linkedin.com/in/itpzzi?trk=profile-badge'>Ítalo Polazzi Ferreira</a>
+                        </div> -->
             </div>
         </div>
         <div class="row">
             <div class="col-xs12 xs-text-align-center pa8">&copy; Ítalo Polazzi - 2019</div>
         </div>
     </footer>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <script src="js/index.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.2.4/custom-elements.min.js"></script>
     <!-- <script src="https://cdn.freecodecamp.org/<i class="mdi mdi-read">able-projects-fcc/v1/bundle.js"></script> --></i>
 </body>
 
